updated widget on-trait-change syntax in julia example

--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -95,15 +95,15 @@
     "(with-slots (image x y size ca cb controls container progress) jw\n",
     "    (setf (widget-children controls) (list x y size ca cb progress))\n",
     "    (setf (widget-children container) (list image controls))\n",
-    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql x)) type name old-value new-value)\n",
+    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql x)) type name old-value new-value source)\n",
     "        (update))\n",
-    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql y)) type name old-value new-value)\n",
+    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql y)) type name old-value new-value source)\n",
     "        (update))\n",
-    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql size)) type name old-value new-value)\n",
+    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql size)) type name old-value new-value source)\n",
     "        (update))\n",
-    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql ca)) type name old-value new-value)\n",
+    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql ca)) type name old-value new-value source)\n",
     "        (update))\n",
-    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql cb)) type name old-value new-value)\n",
+    "    (defmethod jupyter-widgets:on-trait-change :after ((object (eql cb)) type name old-value new-value source)\n",
     "        (update))\n",
     "    (update))"
    ]
