Add more controls

--- a/examples/interactive.ipynb
+++ b/examples/interactive.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(defparameter alist (list (cons \"fu\" 1)))"
+    "(defparameter alist (list (cons \"fu\" 1) (cons \"lima\" (list \"wibble\" \"wibble\")) (cons \"quux\" \"gronk\")))"
    ]
   },
   {
@@ -52,7 +52,12 @@
    "source": [
     "(jupyter-widgets:make-interactive-alist\n",
     "  '((:indicator \"fu\" :type :int :label \"fu (int)\")\n",
-    "    (:indicator \"baz\" :type :string :label \"baz (string)\"))\n",
+    "    (:indicator \"baz\" :type :string :label \"baz (string)\")\n",
+    "    (:indicator \"quux\" :type :option :label \"quux (option)\" :options (\"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"foxtrot\" :type :option :label \"foxtrot (option dropdown)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :dropdown)\n",
+    "    (:indicator \"india\" :type :option :label \"india (option dropdown)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :slider)\n",
+    "    (:indicator \"tango\" :type :option :label \"tango (option dropdown)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :radio)\n",
+    "    #+(or)(:indicator \"lima\" :type :option-range :label \"lima (option range)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :radio))\n",
     "  alist :test #'string=)"
    ]
   },
@@ -63,6 +68,15 @@
    "outputs": [],
    "source": [
     "alist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(make-instance 'jupyter-widgets:select :%options-labels '(\"wibble\" \"gronk\" \"kilroy\") :value \"gronk\")"
    ]
   },
   {
