Add more interactive widgets

--- a/examples/interactive.ipynb
+++ b/examples/interactive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "PLIST"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "191cc731929444d86421ea919529b280",
+       "model_id": "7b4a55074f134824773119667c37c6cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "(:FU 3 :BAZ \"Some text\")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "ALIST"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40bd82840c554c5ad889217c9694c5d1",
+       "model_id": "3d7e2cc1fc844ad7ba503a2bb9d310df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,167 +119,32 @@
     "    (:indicator \"quux\" :type :option :label \"quux (option)\" :options (\"wibble\" \"gronk\" \"kilroy\"))\n",
     "    (:indicator \"foxtrot\" :type :option :label \"foxtrot (option dropdown)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :dropdown)\n",
     "    (:indicator \"india\" :type :option :label \"india (option dropdown)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :slider)\n",
-    "    (:indicator \"tango\" :type :option :label \"tango (option dropdown)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :radio)\n",
-    "    #+(or)(:indicator \"lima\" :type :option-range :label \"lima (option range)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :radio))\n",
+    "    (:indicator \"tango\" :type :option :label \"tango (option radio)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :radio)\n",
+    "    (:indicator \"november\" :type :option :label \"november (option toggle)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :toggle)\n",
+    "    (:indicator \"lima\" :type :option-range :label \"lima (option range)\" :options (\"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"mike\" :type :option-set :label \"mike (option set)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :radio))\n",
     "  alist :test #'string=)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((\"fu\" . 1) (\"lima\" \"wibble\" \"wibble\") (\"quux\" . \"gronk\"))"
+       "((\"november\" . \"kilroy\") (\"fu\" . 1) (\"lima\" \"wibble\" \"wibble\")\n",
+       " (\"quux\" . \"gronk\"))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "alist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a0063a64b914aec4902c5d7d661b15e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "(make-instance 'jupyter-widgets:select :%options-labels '(\"wibble\" \"gronk\" \"kilroy\") :value \"gronk\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "S"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(defparameter s '( (:indicator :%NTF%\n",
-    "       :label \"Force calculation-on (1) -off (2) [NTF]\"\n",
-    "       :type :option :style :dropdown\n",
-    "       :default 2\n",
-    "        :options (1 2 3 4 5 6 7 8)\n",
-    "       :labels (\"complete interaction is calculated\"\n",
-    "                \"bond interactions involving H-atoms omitted (use with NTC=2)\"\n",
-    "                \"all the bond interactions are omitted (use with NTC=3)\"\n",
-    "                \"angle involving H-atoms and all bonds are omitted\"\n",
-    "                \"all bond and angle interactions are omitted\"\n",
-    "                \"dihedrals involving H-atoms and all bonds and all angle interactions are omitted\"\n",
-    "                \"all bond, angle and dihedral interactions are omitted\"\n",
-    "                \"all bond, angle, dihedral and non-bonded interactions are omitted\"))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "A"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(defparameter a nil)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bac8b5e5b5b4daea72470822a3b8554",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "(jupyter-widgets:make-interactive-plist s a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(defparameter c (make-instance 'jupyter-widgets:select :value 1 :options '(1 2 3) :%options-labels '(\"a\" \"b\" \"c\")))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(:%NTF% 6)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(jupyter-widgets:widget-value c)"
    ]
   },
   {
